--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,10 @@
+
 backend:
   name: github
   repo: r8q/sugarci
-  branch: main
-
+  branch: master
+  .... 
+  auth_endpoint: https://api.netlify.com/auth
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
 
