Fix CMS blank screen - corrected index.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
+
 title: R8Q
-author: CaptainIRS
+author: azrasekerci
 description: Merhaba Bu Açıklama
 google_analytics:
 google_site_verification_content: 
@@ -39,3 +40,4 @@ collections:
       output: true
    blog:
       output: true
+
